# Qt_ACT_Game_with_Elements

./: CMakeLists.txt  README.md  大作业文档.md
assets/: assets.qrc
src/: MyGame.cpp  MyGame.h
src/Items/: Gravity.h  HealthBar.cpp  HealthBar.h  Item.cpp  Item.h  Mountable.cpp  Mountable.h  Throwable.cpp  Throwable.h  gravity.cpp
src/Items/Armors/: Armor.cpp  Armor.h  FlamebreakerArmor.cpp  FlamebreakerArmor.h  IceArmor.cpp  IceArmor.h  OldShirt.cpp  OldShirt.h  ThunderArmor.cpp  ThunderArmor.h
src/Items/Arrows/: Arrow.cpp  Arrow.h  FireArrow.cpp  FireArrow.h  IceArrow.cpp  IceArrow.h  NormalArrow.cpp  NormalArrow.h  ThunderArrow.cpp  ThunderArrow.h
src/Items/Blocks/: Blocks.cpp  Blocks.h  Grassblock.cpp  Grassblock.h  Ironblock.cpp  Ironblock.h  Soilblock.cpp  Soilblock.h  Stoneblock.cpp  Stoneblock.h
src/Items/Bows/: Bow.cpp  Bow.h  IronBow.cpp  IronBow.h  IronHandBow.cpp  IronHandBow.h  IronStrongBow.cpp  IronStrongBow.h  WoodBow.cpp  WoodBow.h  WoodHandBow.cpp  WoodHandBow.h  WoodStrongBow.cpp  WoodStrongBow.h
src/Items/Characters/: Character.cpp  Character.cpp.autosave  Character.h  Link.cpp  Link.h  Rival.cpp  Rival.h
src/Items/Conditions/: Condition.cpp  Condition.h  Electrocuted.cpp  Electrocuted.h  Fire.cpp  Fire.h  Frozen.cpp  Frozen.h
src/Items/HeadEquipments/: CapOfTheHero.cpp  CapOfTheHero.h  FlameCap.cpp  FlameCap.h  HairOfTheHero.cpp  HairOfTheHero.h  HeadEquipment.cpp  HeadEquipment.h  IceCap.cpp  IceCap.h  ThunderCap.cpp  ThunderCap.h
src/Items/LegEquipments/: FlameTrousers.cpp  FlameTrousers.h  IceTrousers.cpp  IceTrousers.h  LegEquipment.cpp  LegEquipment.h  ThunderTrousers.cpp  ThunderTrousers.h  WellWornTrousers.cpp  WellWornTrousers.h
src/Items/Maps/: Battlefield.cpp  Battlefield.h  Map.cpp  Map.h  battlebackground.cpp  battlebackground.h
src/Items/MeleeWeapons/: FireSword.cpp  FireSword.h  IceSword.cpp  IceSword.h  IronLongSword.cpp  IronLongSword.h  IronShortSword.cpp  IronShortSword.h  IronStaff.cpp  IronStaff.h  MeleeWeapon.cpp  MeleeWeapon.h  ThunderSword.cpp  ThunderSword.h  WoodLongSword.cpp  WoodLongSword.h  WoodShortSword.cpp  WoodShortSword.h  WoodStaff.cpp  WoodStaff.h
src/Scenes/: BattleScene.cpp  BattleScene.h  CommandDialog.cpp  CommandDialog.h  GameOverDialog.cpp  GameOverDialog.h  Scene.cpp  Scene.h
